-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 20, 21
-
Component/s: hotspot
-
b14
-
x86, aarch64
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8307015 | 20u-cpu | Vladimir Kozlov | P2 | Resolved | Fixed | master |
| JDK-8304741 | 20.0.2 | Vladimir Kozlov | P2 | Closed | Fixed | b03 |
| JDK-8305576 | 20.0.1.0.1-oracle | Ryan Wallace | P2 | Closed | Fixed | b01 |
public class Foo {
public static short bar(float f) {
return Float.floatToFloat16(f);
}
public static void main(String[] args) {
System.out.println(bar(Float.float16ToFloat((short) 31745)));
System.out.println(Float.floatToFloat16(Float.float16ToFloat((short) 31745)));
}
}
- backported by
-
JDK-8307015 C2 Intrinsification of Float.floatToFloat16 and Float.float16ToFloat Yields Different Result than the Interpreter
-
- Resolved
-
-
JDK-8304741 C2 Intrinsification of Float.floatToFloat16 and Float.float16ToFloat Yields Different Result than the Interpreter
-
- Closed
-
-
JDK-8305576 C2 Intrinsification of Float.floatToFloat16 and Float.float16ToFloat Yields Different Result than the Interpreter
-
- Closed
-
- relates to
-
JDK-8293991 java/lang/Float/Binary16ConversionNaN.java fails on silent NaN conversions
-
- Resolved
-
-
JDK-8289551 Conversions between bit representations of half precision values and floats
-
- Resolved
-
-
JDK-8289552 Make intrinsic conversions between bit representations of half precision values and floats
-
- Resolved
-
-
JDK-8324724 Add Stub routines for FP16 conversions on aarch64
-
- Resolved
-
- links to
-
Commit
openjdk/jdk20u/59a3f4f4
-
Commit
openjdk/jdk/8cfd74f7
-
Review
openjdk/jdk20u/21
-
Review
openjdk/jdk/12704
-
Review
openjdk/jdk/12869